aws/int/us-east-1/kops-cluster/services/weave-scope/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  namespace: weave
  name: weave-scope
spec:
  rules:
  - host: scope.steven.hopkins.rocks
    http:
      paths:
      - backend:
          serviceName: weave-scope-app
          servicePort: 4040
  tls:
  - hosts:
    - scope.steven.hopkins.rocks
    secretName: scope-install-tls
